# rl

./: .gitignore  pyproject.toml
basics/: generate_loop.py  model_forward.py  model_generate.py
src/server/: http_server.py
src/train/: grpo.py
src/utils/: parser.py
tests/: test_server.py
