[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "huggingface-hub>=1.20.1",
    "requests>=2.34.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/utils", "src/server"]
